fix bugs on modals : missing close button, missing color

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -164,6 +164,14 @@ body {
 }
 
 /*
+ * Login content
+ */
+
+ .modal-header {
+   border-radius: 4px 4px 0 0;
+ }
+
+/*
  * Placeholder dashboard ideas
  */
 
